--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          <ul class="listing" id="inline">
 
                   <li>
-                    <a href="linkedin.com/in/shaina-laidouni-" target="_blank" id="blue-text">
+                    <a href="https://www.linkedin.com/in/shaina-laidouni-?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BKvUE6DEhQE2Efa516tCT2Q%3D%3D-" target="_blank" id="blue-text">
                       <i class="fa-brands fa-linkedin"></i>
                     </a>
                   </li>
