--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h1> My resume</h1>
           <img src="images/shaina.jpg" id="PP" class="img-circle" width="150px" alt="shaina.jpg">
           <h3 id="white-text"> Hi, I'm Shaina Laidouni, let's meet! </h3>
-         <a href="https://www.canva.com/design/DAE-4qYi9n0/8J_OYsRH-o-fy41cs9NMyQ/view?utm_content=DAE-4qYi9n0&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank" id="btn-linkedin"> Download my CV PDF</a>
+         <a href="https://www.canva.com/design/DAFjEqcKd2A/8q2AXurbggTV11TFz_iq5Q/view?utm_content=DAFjEqcKd2A&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank" id="btn-linkedin"> Download my CV PDF</a>
          <ul class="listing" id="inline">
 
                   <li>
@@ -30,7 +30,7 @@
                   </li>
 
                   <li>
-                    <a href="mailto:Shaina.laidouni@ieseg.fr" target="_blank" id="blue-text">
+                    <a href="mailto:shaina.laidouni75@gmail.com" target="_blank" id="blue-text">
                     <i class="fa-solid fa-envelope"></i>
                     </a>
                   </li>
