--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
       <title>Shaina Laidouni's resume</title>
-      <meta name="description" content="In this page, you will discover Shaina LAIDOUNI's resume for the course Web Development at IESEG School of Management.">
+      <meta name="description" content="In this page, you will discover Shaina LAIDOUNI's resume for the course Web Development at IESEG School of Management">
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
       <link href="style.css" rel="stylesheet">
